--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+  <body class="min-h-screen bg-orange-100 dark:bg-black dark:text-white">
+    <header class="bg-amber-600 text-black sticky top-0 z-10">
+        <section class="max-w-4xl flex flex-wrap justify-between items-center">
+            <figure class="w-full min-w-[150px] max-w-[293px]">
+                <img src="img/nav-bar-logo.jpeg" alt="Paradiso Logo" class="w-full h-auto">
+                <figcaption class="absolute -left-[10000px]">
+                    Paradiso Logo
+                </figcaption>
+            </figure>
+            <nav class="flex flex-row gap-x-6 items-center">
+            <a href="#hero" class=" text-center px-2 py-3 hover:opacity-50"
+                >Home</a
+            >
+            <a href="#story" class=" text-center px-2 py-3  hover:opacity-50"
+                >Our story</a
+            >
+            <a
+                href="#menu"
+                class="text-center px-2 py-3 hover:opacity-50"
+                >Menu</a
+            >
+            <a href="#feedback" class="text-center px-2 py-3 hover:opacity-50"
+                >Feedback</a
+            >
+            <a href="#chatbot" class="text-center px-2 py-3 hover:opacity-50"
+                >Chat</a
+            >
+            <button class="text-2xl ml-6 px-2 py-3 hover:opacity-50">🌙
+            </button>
+            </nav>
+        </section>
+    </header>
+    
   </body>
 </html>
