refactor: add a dropdown menu for the menu

--- a/index.html
+++ b/index.html
@@ -23,11 +23,26 @@
             <a href="#story" class=" text-center px-2 py-3  hover:opacity-50"
                 >Our story</a
             >
-            <a
-                href="#menu"
-                class="text-center px-2 py-3 hover:opacity-50"
-                >Menu</a
-            >
+            <div class="relative group">
+                <button class="text-center px-2 py-3  hover:opacity-50">
+                    Menu    
+                </button>
+
+                <ul class="absolute top-full left-0 mt-1 bg-amber-600 text-black shadow-md hidden group-hover:block z-20 w-40">
+                    <li>
+                        <a href="#starters" class="block px-2 py-3 hover:opacity-50">Starters</a>
+                    </li>
+                    <li>
+                        <a href="#main-dishes" class="block px-2 py-3 hover:opacity-50">Main Dishes</a>
+                    </li>
+                    <li>
+                        <a href="#drinks" class="block px-2 py-3 hover:opacity-50">Drinks</a>
+                    </li>
+                    <li>
+                        <a href="#desserts" class="block px-2 py-3 hover:opacity-50">Desserts</a>
+                    </li>
+                </ul>
+            </div>
             <a href="#feedback" class="text-center px-2 py-3 hover:opacity-50"
                 >Feedback</a
             >
