Refactor: Added typing animation

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             </div>
 
             <div class="z-10 absolute inset-0 flex flex-col items-center justify-center text-center gap-6 px-4 py-8">
-                <h2 class="font-italianno text-3xl sm:text-4xl 
+                <h2 id="typeWriter" class="font-italianno text-3xl sm:text-4xl 
                 md:text-6xl lg:text-7xl
                 text-white">
-                    Paradiso Afrique
+                
                 </h2>
                 <button class="px-2 py-3 bg-orange-100 text-black font-bold rounded">
                     RESERVE A SEAT
