--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="min-h-screen bg-orange-100 dark:bg-black dark:text-white overflow-x-hidden">
-    <section id="chatbot" class="bg-[url('img/chatbot-section-background.jpeg')] bg-cover bg-center bg-no-repeat min-h-screen py-10 px-2">
+    <section id="chatbot" class="bg-[url('img/chatbot-section-background.jpeg')] bg-cover bg-left bg-no-repeat min-h-screen py-10 px-2">
 
       <!-- Chatbot container-->
       <div class="relative">
         <!--Section title-->
         <div class="flex justify-center">
-          <h2 class="bg-white inline-block px-10 text-3xl font-italianno text-center mb-8">
+          <h2 class="bg-white inline-block px-20 text-3xl font-italianno text-center mb-8">
             Chat With Our Chef
           </h2>
         </div>
         <!--Chatbot interface-->
-        <div class="bg-white rounded max-w-[400px] mx-auto py-6 text-center"> <span class="font-italianno text-2xl">Ask Chef Kofi</span>
+        <div class="bg-white rounded max-w-[400px] ml-10 py-6 text-center"> <span class="font-italianno text-2xl">Ask Chef Kofi</span>
           <!--Chatbot messages-->
           <div class="w-full h-[400px] overflow-y-auto mb-4 bg-orange-100 scroll-smooth">
             <!--Bot Message-->
@@ -56,25 +56,25 @@
               class="flex-grow px-4 py-3 border-2 border-white rounded outline-none focus:border-amber-600" />
             <button 
               class="w-[45px] h-[45px] bg-white text-black flex items-center justify-center text-xl">
-              🙂
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M620-520q25 0 42.5-17.5T680-580q0-25-17.5-42.5T620-640q-25 0-42.5 17.5T560-580q0 25 17.5 42.5T620-520Zm-280 0q25 0 42.5-17.5T400-580q0-25-17.5-42.5T340-640q-25 0-42.5 17.5T280-580q0 25 17.5 42.5T340-520Zm140 260q68 0 123.5-38.5T684-400h-66q-22 37-58.5 58.5T480-320q-43 0-79.5-21.5T342-400h-66q25 63 80.5 101.5T480-260Zm0 180q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-400Zm0 320q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Z"/></svg>
             </button>
             <button 
               class="w-[45px] h-[45px] bg-white text-black flex items-center justify-center text-xl">
-              📩
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M170-228q-38-45-61-99T80-440h82q6 43 22 82.5t42 73.5l-56 56ZM80-520q8-59 30-113t60-99l56 56q-26 34-42 73.5T162-520H80ZM438-82q-59-6-112.5-28.5T226-170l56-58q35 26 74 43t82 23v80ZM284-732l-58-58q47-37 101-59.5T440-878v80q-43 6-82.5 23T284-732ZM518-82v-80q44-6 83.5-22.5T676-228l58 58q-47 38-101.5 60T518-82Zm160-650q-35-26-75-43t-83-23v-80q59 6 113.5 28.5T734-790l-56 58Zm112 504-56-56q26-34 42-73.5t22-82.5h82q-8 59-30 113t-60 99Zm8-292q-6-43-22-82.5T734-676l56-56q38 45 61 99t29 113h-82ZM441-280v-247L337-423l-56-57 200-200 200 200-57 56-103-103v247h-80Z"/></svg>
             </button>
           </div>
         </div>
       </div>
       
-      <div class="px-10 py-10 mt-8">
+      <div class="inline-block px-10 py-10 mt-8">
         <ul class="space-y-8">
-          <li class="bg-orange-100 px-7 py-3 cursor-pointer">
+          <li class="bg-orange-100 px-22 py-3 cursor-pointer hover:text-gray-300">
             What is your most popular dish?
           </li>
-          <li class="bg-orange-100 px-7 py-3 cursor-pointer">
+          <li class="bg-orange-100 px-7 py-3 cursor-pointer hover:text-gray-300">
             How long does it take for food to be ready?
           </li>
-          <li class="bg-orange-100 px-7 py-3 cursor-pointer">
+          <li class="bg-orange-100 px-7 py-3 cursor-pointer hover:text-gray-300">
             Do you offer delivery services?
           </li>
         </ul>
