Feat: Add Smooth scrolling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     </script>
   </head>
-  <body class="min-h-screen bg-orange-100 dark:bg-black dark:text-white overflow-x-hidden">
+  <body class="min-h-screen bg-orange-100 dark:bg-black dark:text-white overflow-x-hidden scroll-smooth">
     <header class="bg-amber-600 text-black sticky top-0 z-100">
         <section class="max-w-4xl flex flex-wrap justify-between items-center">
             <figure class="mr-auto min-w-[150px] max-w-[293px]">
