--- a/feedback/feedback.html
+++ b/feedback/feedback.html
@@ -5,37 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google Fonts for cursive header -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+  <style>
+    .cursive { font-family: 'Dancing Script', cursive; }
+    body {
+      background: linear-gradient(135deg, #fce4ec 0%, #fff 100%);
+    }
+  </style>
 </head>
-<body class="bg-pink-50 min-h-screen flex items-center justify-center">
-  <div class="w-full max-w-md mx-auto p-4">
-    <div class="text-center mb-4">
-      <h1 class="inline-block bg-green-200 text-green-900 text-2xl font-cursive px-6 py-2 rounded-md shadow">Feedback Form</h1>
+<body class="min-h-screen flex items-center justify-center">
+  <div class="w-full min-h-screen flex items-center justify-center relative">
+    <!-- Optional: Decorative leaves (SVGs) in corners -->
+    <div class="absolute top-0 left-0 w-24 h-24 opacity-60 pointer-events-none">
+      <!-- Example SVG leaf, you can add more or use images -->
+      <svg viewBox="0 0 64 64" fill="none"><ellipse cx="32" cy="32" rx="32" ry="16" fill="#a7c957"/></svg>
     </div>
-    <div class="bg-yellow-100 rounded-xl shadow-lg p-6">
-      <div class="mb-4 text-center">
-        <button class="bg-yellow-400 text-xs text-gray-900 px-4 py-2 rounded hover:bg-yellow-500 transition">
-          Tell us about Your Experience at Paradiso Afrique
-        </button>
+    <div class="absolute bottom-0 right-0 w-24 h-24 opacity-60 pointer-events-none">
+      <svg viewBox="0 0 64 64" fill="none"><ellipse cx="32" cy="32" rx="32" ry="16" fill="#a7c957"/></svg>
+    </div>
+    <!-- Main Card -->
+    <div class="bg-[#f5e3c3] rounded-xl shadow-lg px-6 py-8 w-full max-w-md mx-auto z-10">
+      <div class="flex flex-col items-center mb-4">
+        <div class="bg-[#7ca982] px-8 py-2 rounded-md mb-4 shadow cursive text-2xl text-black" style="font-family: 'Dancing Script', cursive;">
+          Feedback Form
+        </div>
+        <div class="mb-4 w-full flex justify-center">
+          <div class="bg-[#e6a94d] text-xs text-black px-4 py-2 rounded shadow text-center w-full max-w-xs">
+            Tell us about Your Experience at Paradiso Afrique
+          </div>
+        </div>
       </div>
       <form id="feedbackForm" class="space-y-4">
         <div>
           <label class="block text-gray-700 mb-1" for="name">Full Name:</label>
-          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300" type="text" id="name" required>
+          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300 bg-white" type="text" id="name" required>
         </div>
         <div>
           <label class="block text-gray-700 mb-1" for="email">Email:</label>
-          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300" type="email" id="email" required>
+          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300 bg-white" type="email" id="email" required>
         </div>
         <div>
           <label class="block text-gray-700 mb-1" for="phone">Phone (Optional):</label>
-          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300" type="tel" id="phone">
+          <input class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300 bg-white" type="tel" id="phone">
         </div>
         <div>
           <label class="block text-gray-700 mb-1" for="message">Message:</label>
-          <textarea class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300" id="message" rows="4" required></textarea>
+          <textarea class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-300 bg-white" id="message" rows="4" required></textarea>
         </div>
         <div class="text-center">
-          <button type="submit" class="bg-green-700 text-white px-8 py-2 rounded hover:bg-green-800 transition">SUBMIT</button>
+          <button type="submit" class="bg-[#7ca982] text-white px-8 py-2 rounded hover:bg-green-800 transition">SUBMIT</button>
         </div>
       </form>
     </div>
