--- a/feedback/feedback.html
+++ b/feedback/feedback.html
@@ -9,23 +9,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <style>
     .cursive { font-family: 'Dancing Script', cursive; }
-    body {
-      background: linear-gradient(135deg, #fce4ec 0%, #fff 100%);
-    }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center">
-  <div class="w-full min-h-screen flex items-center justify-center relative">
-    <!-- Optional: Decorative leaves (SVGs) in corners -->
-    <div class="absolute top-0 left-0 w-24 h-24 opacity-60 pointer-events-none">
-      <!-- Example SVG leaf, you can add more or use images -->
-      <svg viewBox="0 0 64 64" fill="none"><ellipse cx="32" cy="32" rx="32" ry="16" fill="#a7c957"/></svg>
-    </div>
-    <div class="absolute bottom-0 right-0 w-24 h-24 opacity-60 pointer-events-none">
-      <svg viewBox="0 0 64 64" fill="none"><ellipse cx="32" cy="32" rx="32" ry="16" fill="#a7c957"/></svg>
-    </div>
-    <!-- Main Card -->
-    <div class="bg-[#f5e3c3] rounded-xl shadow-lg px-6 py-8 w-full max-w-md mx-auto z-10">
+<body class="min-h-screen flex items-center justify-center relative overflow-hidden">
+  <!-- Background image -->
+  <img 
+    src="img/bg.jpg" 
+    alt="bg"
+    class="absolute inset-0 w-full h-full object-cover z-0" 
+  />
+  <!-- Feedback form container -->
+  <div class="w-full min-h-screen flex items-center justify-center relative z-10">
+    <div class="bg-[#f5e3c3] rounded-xl shadow-lg px-6 py-8 w-full max-w-md mx-auto">
       <div class="flex flex-col items-center mb-4">
         <div class="bg-[#7ca982] px-8 py-2 rounded-md mb-4 shadow cursive text-2xl text-black" style="font-family: 'Dancing Script', cursive;">
           Feedback Form
@@ -67,4 +62,4 @@
     });
   </script>
 </body>
-</html>
+</html> 
