--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 text-white">
                 
                 </h2>
-                <button class="px-2 py-3 bg-orange-100 text-black font-bold rounded">
+                <button id="ctaBtn" class="px-2 py-3 bg-orange-100 text-black font-bold rounded">
                     RESERVE A SEAT
                 </button>
             </div>
