--- a/index.html
+++ b/index.html
@@ -203,13 +203,7 @@
           </div>
         </section>
 
-        <section id="feedback">
-            <!-- Background image -->
-            <img 
-                src="img/.jpg" 
-                alt="bg"
-                class="absolute inset-0 w-full h-full object-cover z-0" 
-            />
+        <section id="feedback" class="bg-[url('img/feedback-form-background.jpeg')] bg-cover bg-center bg-no-repeat min-h-screen py-10 px-2">
             <!-- Feedback form container -->
             <div class="w-full min-h-screen flex items-center justify-center relative z-10">
                 <div class="bg-[#f5e3c3] rounded-xl shadow-lg px-6 py-8 w-full max-w-md mx-auto">
