Refactor: Restructure the story-section

--- a/index.html
+++ b/index.html
@@ -98,26 +98,28 @@
         </section>
 
         <section id="story">
-            <div class="w-full max-w-xs sm:max-w-sm mx-auto">
-                <!-- Title -->
-                <div class="rounded-xl bg-[#f3e7d9] px-6 py-2 mt-2 mx-auto w-[95%] flex justify-center items-center"
-                    style="margin-bottom: -1.5rem; z-index: 10; position: relative;">
-                <span class="text-2xl font-serif italic text-center">Paradiso Afrique Story</span>
-                </div>
-                <!-- Image -->
-                <img src="img/about-us-image.jpeg" alt="image"
-                    class="w-full h-72 object-cover rounded-none border-none shadow-none" />
-                <!-- Text -->
-                <div class="bg-[#f3e7d9] px-4 py-5">
-                <p class="text-gray-900 mb-4 text-base leading-relaxed">
-                    At Paradiso Afrique, we bring Africa to your plate one soulful dish at a time. Inspired by the warmth of home and the rhythm of our roots, our space is a celebration of culture, flavor, and connection.
-                </p>
-                <p class="text-gray-900 mb-4 text-base leading-relaxed">
-                    From Nigerian jollof to Kenyan chapati, every recipe tells a story and every visit feels like a journey through the heart of the continent.
-                </p>
-                <p class="text-gray-900 font-semibold text-base">Pull up a chair. You're home.</p>
-                </div>
+            <!-- Title -->
+            <div class="flex justify-center">
+                <h2 class="bg-orange-50 inline-block px-5 rounded-lg text-5xl font-italianno text-center mb-8">
+                    Paradiso Afrique Story
+                </h2>
             </div>
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-8 mx-auto">
+                <!-- Image -->
+                <div>
+                    <img src="img/about-us-image.jpeg" alt="image" class="w-335 h-150 object-cover rounded-none border-none shadow-none" />
+                </div>
+                <!-- Text -->
+                <div class="px-4 py-5 mt-20">
+                    <p class="text-gray-900 mb-8 text-base leading-relaxed">
+                        At Paradiso Afrique, we bring Africa to your plate one soulful dish at a time. Inspired by the warmth of home and the rhythm of our roots, our space is a celebration of culture, flavor, and connection.
+                    </p>
+                    <p class="text-gray-900 mb-4 text-base leading-relaxed">
+                        From Nigerian jollof to Kenyan chapati, every recipe tells a story and every visit feels like a journey through the heart of the continent.
+                    </p>
+                    <p class="text-gray-900 font-semibold text-base">Pull up a chair. You're home.</p>
+                </div>  
+            </div>    
         </section>
 
   
