Style: Modified nav-bar bg in dark mode

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Paradiso Afrique Restaurant</title>
   </head>
   <body class="min-h-screen bg-orange-100 dark:bg-black dark:text-white overflow-x-hidden scroll-smooth">
-    <header class="bg-amber-600 text-black sticky top-0 z-40">
+    <header class="bg-amber-600 dark:bg-black text-black dark:text-white sticky top-0 z-40">
         <section class="max-w-4xl flex flex-wrap justify-between items-center">
             <figure class="mr-auto min-w-[150px] max-w-[293px]">
                 <img src="img/nav-bar-logo.jpeg" alt="Paradiso Logo" class="w-full h-auto">
