--- a/index.html
+++ b/index.html
@@ -250,58 +250,33 @@
     
         <section id="chatbot" class="bg-[url('img/chatbot-section-background.jpeg')] bg-cover bg-left bg-no-repeat min-h-screen py-10 px-2">
 
-        <!-- Chatbot container-->
-        <div class="relative">
-            <!--Section title-->
-            <div class="flex justify-center">
-                <h2 class="bg-white dark:text-black inline-block px-20 text-3xl font-italianno text-center mb-8">
-                    Chat With Our Chef
-                </h2>
-            </div>
-            <!--Chatbot interface-->
-            <div class="bg-white rounded max-w-[400px] ml-10 py-6 text-center"> <span class="font-italianno dark:text-black text-2xl">Ask Chef Kofi</span>
-            <!--Chatbot messages-->
-            <div class="w-full h-[400px] overflow-y-auto mb-4 bg-orange-100 scroll-smooth">
-                <!--Bot Message-->
-                <div class=" mt-12 mb-8 flex items-start gap-3">
-                <div class="flex items-center justify-center text-3xl flex-shrink-0 py-3"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M360-400h80v-200h-80v200Zm-160-60q-46-23-73-66.5T100-621q0-75 51.5-127T278-800q12 0 24.5 2t24.5 5q25-41 65-64t88-23q48 0 88 23t65 64q12-3 24-5t25-2q75 0 126.5 52T860-621q0 51-27 94.5T760-460v220H200v-220Zm320 60h80v-200h-80v200Zm-240 80h400v-189l44-22q26-13 41-36.5t15-52.5q0-42-28.5-71T682-720q-11 0-20 2t-19 5l-47 13-31-52q-14-23-36.5-35.5T480-800q-26 0-48.5 12.5T395-752l-31 52-48-13q-10-2-19.5-4.5T277-720q-41 0-69 29t-28 71q0 29 15 52.5t41 36.5l44 22v189Zm-80 80h80v80h400v-80h80v160H200v-160Zm280-80Z"/></svg></div>
-                <div class="max-w-[70%] px-2 py-3 rounded-[18px] bg-white text-black breakwords">
-                    Hey there. How can I help you today?
-                </div> 
-                </div>
-                <!--User Message-->
-                <div class="mb-8 flex justify-end gap-1">
-                <div class="max-w-[70%] px-2 py-3 rounded-[18px] bg-white text-black breakwords">
-                    What is your most popular dish?
-                </div> 
-                </div>
-                <!-- Typing Indicator -->
-                <div id="typingIndicator" class="flex items-center gap-2 px-4 py-3 text-gray-800 rounded-[18px] rounded-bl-[4px] max-w-fit">
+       <!-- Chatbot Section -->
+<div class="relative p-6 bg-white max-w-md rounded shadow-lg ml-6">
+  <h2 class="text-center text-2xl font-bold mb-4">Chat With Our Chef</h2>
+  <div id="chatArea" class="h-96 overflow-y-auto bg-orange-100 p-3 rounded scroll-smooth">
+    <div class="flex items-start gap-3 mb-4">
+      <div class="flex items-center justify-center text-3xl flex-shrink-0 py-3">
+        🍽️
+      </div>
+      <div class="bg-white text-black px-4 py-2 rounded-[18px] max-w-[70%]">
+        Hello! I'm Chef Kofi. What would you like to know?
+      </div>
+    </div>
+    <div id="typingIndicator" class="hidden flex items-center gap-2 mt-2 px-3 py-2">
+      <div class="w-2 h-2 bg-gray-600 rounded-full animate-bounce"></div>
+      <div class="w-2 h-2 bg-gray-600 rounded-full animate-bounce delay-100"></div>
+      <div class="w-2 h-2 bg-gray-600 rounded-full animate-bounce delay-200"></div>
+    </div>
+  </div>
+  <div class="flex items-center mt-4 gap-2">
+    <input id="userInput" type="text" placeholder="Write your message"
+      class="flex-grow px-4 py-2 border border-gray-300 rounded focus:outline-none" />
+    <button id="sendBtn" class="bg-white text-black w-11 h-11 flex items-center justify-center rounded border">
+      ⬆
+    </button>
+  </div>
+</div>
 
-                <div class="flex gap-[0.2rem]">
-                    <div class="w-2 h-2 bg-gray-600 rounded-full typing-dot delay-1"></div>
-                    <div class="w-2 h-2 bg-gray-600 rounded-full typing-dot delay-2"></div>
-                    <div class="w-2 h-2 bg-gray-600 rounded-full typing-dot"></div>
-                </div>
-
-                <span class="ml-2"></span>
-                </div>
-                </div>
-                <!-- Input Area -->
-                <div class="flex items-center gap-1">
-                    <input type="text" placeholder="Write your Message"
-                    class="flex-grow px-4 py-3 border-2 border-white rounded outline-none focus:border-amber-600" />
-                    <button 
-                    class="w-[45px] h-[45px] bg-white text-black flex items-center justify-center text-xl">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M620-520q25 0 42.5-17.5T680-580q0-25-17.5-42.5T620-640q-25 0-42.5 17.5T560-580q0 25 17.5 42.5T620-520Zm-280 0q25 0 42.5-17.5T400-580q0-25-17.5-42.5T340-640q-25 0-42.5 17.5T280-580q0 25 17.5 42.5T340-520Zm140 260q68 0 123.5-38.5T684-400h-66q-22 37-58.5 58.5T480-320q-43 0-79.5-21.5T342-400h-66q25 63 80.5 101.5T480-260Zm0 180q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-400Zm0 320q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Z"/></svg>
-                    </button>
-                    <button 
-                    class="w-[45px] h-[45px] bg-white text-black flex items-center justify-center text-xl">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M170-228q-38-45-61-99T80-440h82q6 43 22 82.5t42 73.5l-56 56ZM80-520q8-59 30-113t60-99l56 56q-26 34-42 73.5T162-520H80ZM438-82q-59-6-112.5-28.5T226-170l56-58q35 26 74 43t82 23v80ZM284-732l-58-58q47-37 101-59.5T440-878v80q-43 6-82.5 23T284-732ZM518-82v-80q44-6 83.5-22.5T676-228l58 58q-47 38-101.5 60T518-82Zm160-650q-35-26-75-43t-83-23v-80q59 6 113.5 28.5T734-790l-56 58Zm112 504-56-56q26-34 42-73.5t22-82.5h82q-8 59-30 113t-60 99Zm8-292q-6-43-22-82.5T734-676l56-56q38 45 61 99t29 113h-82ZM441-280v-247L337-423l-56-57 200-200 200 200-57 56-103-103v247h-80Z"/></svg>
-                    </button>
-                </div>
-                </div>
-            </div>
             
         <div class="inline-block px-10 py-10 mt-8">
             <ul class="space-y-8">
